welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:10: error: not found: value weeday
	}else if(weeday == true && vacation == true){
                 ^sleepIn:10: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if(weeday == true && vacation == true){
              ^