welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	var weekday:Boolean = true 
	var vacation:Boolean = true
	if(!weekday == true && vacation == true) {
		return true
	}else if(weekday == true && !vacation == true){
		return false
	}else if(!weekday == true && !vacation == true){
		return true
	}else if(weeday == true && vacation == true){
		return true
	}
}


/**if(Boolean_expression 1){
   //Executes when the Boolean expression 1 is true
}else if(Boolean_expression 2){
   //Executes when the Boolean expression 2 is true
}else if(Boolean_expression 3){
   //Executes when the Boolean expression 3 is true
}else {
   //Executes when the none of the above condition is true.
}
*/
